2021-10-08  Matteo Corti  <matteo@corti.li>

        * test/unit_tests.sh (testSubdomainWithUnderscore): does not test with older OpenSSL versions not supporting _
        * check_ssl_cert (fetch_certificate): Fixed a typo

2021-10-06  Matteo Corti  <matteo@corti.li>

        * check_ssl_cert (check_ocsp): better handling of HTML pages instead of certificates
        * check_ssl_cert (parse_command_line_options): a URL can be given as host (scheme and path will be stripped)

        * check_ssl_cert (check_attr): accepts certificates without subject alternative names

2021-10-05  Matteo Corti  <matteo@corti.li>

        * check_ssl_cert (debuglog): added an option (--debug-time) to print the elapsed time in the debugging output

2021-10-01  Matteo Corti  <matteo@corti.li>

        * check_ssl_cert (check_attr): --skip-elemnt now skips a single element and can be specified multiple times

2021-09-29  Matteo Corti  <matteo@corti.li>

        * check_ssl_cert (main): Added an option to set a custom state by connection failures

2021-09-27  Matteo Corti  <matteo@corti.li>

        * check_ssl_cert (hours_until): supporting certificate expiration after 2038-01-19 on 32 bit systems
        * check_ssl_cert (main): adds a check for acceptable client certificate CAs
        * test/unit_tests.sh: added a routine to create a self-signed certificate expiring in a given number of days
        * test/unit_tests.sh: added a test for a certificate expiring between 0.5 and 1.5 days

2021-09-25 Bernd Stroessenreuther <booboo@gluga.de>

        * test/unit_tests.sh: adding tests for using floating point numbers in thresholds

2021-09-24 Bernd Stroessenreuther <booboo@gluga.de>

        * check_ssl_cert: --warning and --critical now also accept floating point numbers

2021-09-24  Matteo Corti  <corti@precise>

        * test/unit_tests.sh (oneTimeSetup): defining TMPDIR if not defined

2021-09-24 Bernd Stroessenreuther <booboo@gluga.de>
