@@ -1,7 +1,7 @@
 .\" Process this file with
 .\" groff -man -Tascii check_ssl_cert.1
 .\"
-.TH "check_ssl_cert" 1 "October, 2021" "2.9.1" "USER COMMANDS"
+.TH "check_ssl_cert" 1 "October, 2021" "2.10.0" "USER COMMANDS"
 .SH NAME
 check_ssl_cert \- checks the validity of X.509 certificates
 .SH SYNOPSIS
@@ -141,6 +141,9 @@ ignore expiration date
 .TP
 .BR "   --ignore-host-cn"
 do not complain if the CN does not match the host name
+.TP
+.BR "   --ignore-incomplete-chain"
+does not check chain integrity
 .TP
 .BR "   --ignore-ocsp"
 do not check revocation with OCSP
@@ -381,4 +384,3 @@ https://github.com/matteocorti/check_ssl_cert/issues
 .SH AUTHOR
 Matteo Corti (matteo (at) corti.li )
 See the AUTHORS file for the complete list of contributors
-
