@@ -1,0 +1,67 @@
+-----BEGIN CERTIFICATE-----
+MIIGWTCCBUGgAwIBAgISA9DCW0L1UydgMoTUK0oiAxFAMA0GCSqGSIb3DQEBCwUA
+MDIxCzAJBgNVBAYTAlVTMRYwFAYDVQQKEw1MZXQncyBFbmNyeXB0MQswCQYDVQQD
+EwJSMzAeFw0yMTA5MjgxNDQ2MjhaFw0yMTEyMjcxNDQ2MjdaMBMxETAPBgNVBAMT
+CGNvcnRpLmxpMIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAxN3LGV5P
+mXff7r/vftXEJpLE1SwdoOj6jy+IY0BXfdmJ/uxMVK+a+Bf23DlK/RoIgp2ysn82
+i0sSehvaSTRBAb32e0ZfBzCHODsTUYOZMTf8PFevozjRFYFmUItHR8ldepym/y0w
+Gf4i+Xnhe9580rVRmQRArS2hJypjIOgy4qb5mW3LiJhL8scl4rYHSBOq5vXeBFdk
+BxK44ohVGGiAt0Rh+kMdUB7rWOwbsWvO/MF3igAe6O5mDgMUi4PFE+ZOGOsQrfrU
+6nzEiGgza4cxRd+11Mp6gcITkKSik8hmpxLy0SPFKeS+OgNxEIPG2qTW84mTE8Ac
+a+gV8L1uoq83SQIDAQABo4IDhjCCA4IwDgYDVR0PAQH/BAQDAgWgMB0GA1UdJQQW
+MBQGCCsGAQUFBwMBBggrBgEFBQcDAjAMBgNVHRMBAf8EAjAAMB0GA1UdDgQWBBRJ
+ekufQMoGKX0SGg32uVXhKIe5EzAfBgNVHSMEGDAWgBQULrMXt1hWy65QCUDmH6+d
+ixTCxjBVBggrBgEFBQcBAQRJMEcwIQYIKwYBBQUHMAGGFWh0dHA6Ly9yMy5vLmxl
+bmNyLm9yZzAiBggrBgEFBQcwAoYWaHR0cDovL3IzLmkubGVuY3Iub3JnLzCCAVQG
+A1UdEQSCAUswggFHghNibG9nLm1hdHRlb2NvcnRpLmNogghjb3J0aS5saYIRZGVu
+dGFsLWF0ZWxpZXIuY2iCE21hdHJpbW9uaW8uY29ydGkubGmCD21hdHRlby5jb3J0
+aS5saYIObWF0dGVvY29ydGkuY2iCE21pY2hlbGEtZS1tYXR0ZW8uY2iCDXBhc2ku
+Y29ydGkubGmCDHJwbS5jb3J0aS5saYIPc2NvcmFkLmNvcnRpLmxpgg10ZXN0LmNv
+cnRpLmxpggx3d3cuY29ydGkubGmCFXd3dy5kZW50YWwtYXRlbGllci5jaIISd3d3
+Lm1hdHRlb2NvcnRpLmNoghd3d3cubWljaGVsYS1lLW1hdHRlby5jaIIRd3d3LnBh
+c2kuY29ydGkubGmCE3d3dy5zY29yYWQuY29ydGkubGmCEXd3dy50ZXN0LmNvcnRp
+LmxpMEwGA1UdIARFMEMwCAYGZ4EMAQIBMDcGCysGAQQBgt8TAQEBMCgwJgYIKwYB
+BQUHAgEWGmh0dHA6Ly9jcHMubGV0c2VuY3J5cHQub3JnMIIBBAYKKwYBBAHWeQIE
+AgSB9QSB8gDwAHYARJRlLrDuzq/EQAfYqP4owNrmgr7YyzG1P9MzlrW2gagAAAF8
+LRX/HQAABAMARzBFAiBiLZ/Zc51crIQxccNWJIeBzea6Uff0OdjFMucAPz3HXgIh
+AN2ETUND5KAm41gzQJaZq1V1bThedOqf0vNEBhKHoTqOAHYA9lyUL9F3MCIUVBgI
+MJRWjuNNExkzv98MLyALzE7xZOMAAAF8LRX/BAAABAMARzBFAiEAnszF99sK6sOY
+XP195TkK8ro80TT2/7vohZvaZDJtSoYCIHCGpKsdGHLhJEZm+a9zfwOmDaj098v0
+Ed262BlsvUTJMA0GCSqGSIb3DQEBCwUAA4IBAQA/9kxh9PQpmbSbWg+4RMCVKB/d
+JnY8NrDzCOUWraAGFq+mthldKR4quOpkQPs66lrkcuv/OTiTRYUyoBrDzXHmLnTJ
+O2gKaMs65BkGTfQwDj2TKpLCll/3gaxwi9+NjpkoOmKB/QganBb9Ym9aLIVAsbCy
+fc2mdVcHSHqZ1BRfw+R3PBOca4/sPCod+DSzxJxij9AakmQZYznb7sfP50uLPG6h
+vOAO6cHFAlOppvejrtmNl6VAH91I7C0cIqfnSJN6U2VAvtxPQYeloHD7OHJiYwH4
+7P8WrglNhcNuLD4ENWjcnQ2NjpZeUNOZ2m5zYfZfCPTTVaLxFCPq7PffAuXe
+-----END CERTIFICATE-----
+-----BEGIN CERTIFICATE-----
+MIIFYDCCBEigAwIBAgIQQAF3ITfU6UK47naqPGQKtzANBgkqhkiG9w0BAQsFADA/
+MSQwIgYDVQQKExtEaWdpdGFsIFNpZ25hdHVyZSBUcnVzdCBDby4xFzAVBgNVBAMT
+DkRTVCBSb290IENBIFgzMB4XDTIxMDEyMDE5MTQwM1oXDTI0MDkzMDE4MTQwM1ow
+TzELMAkGA1UEBhMCVVMxKTAnBgNVBAoTIEludGVybmV0IFNlY3VyaXR5IFJlc2Vh
+cmNoIEdyb3VwMRUwEwYDVQQDEwxJU1JHIFJvb3QgWDEwggIiMA0GCSqGSIb3DQEB
+AQUAA4ICDwAwggIKAoICAQCt6CRz9BQ385ueK1coHIe+3LffOJCMbjzmV6B493XC
+ov71am72AE8o295ohmxEk7axY/0UEmu/H9LqMZshftEzPLpI9d1537O4/xLxIZpL
+wYqGcWlKZmZsj348cL+tKSIG8+TA5oCu4kuPt5l+lAOf00eXfJlII1PoOK5PCm+D
+LtFJV4yAdLbaL9A4jXsDcCEbdfIwPPqPrt3aY6vrFk/CjhFLfs8L6P+1dy70sntK
+4EwSJQxwjQMpoOFTJOwT2e4ZvxCzSow/iaNhUd6shweU9GNx7C7ib1uYgeGJXDR5
+bHbvO5BieebbpJovJsXQEOEO3tkQjhb7t/eo98flAgeYjzYIlefiN5YNNnWe+w5y
+sR2bvAP5SQXYgd0FtCrWQemsAXaVCg/Y39W9Eh81LygXbNKYwagJZHduRze6zqxZ
+Xmidf3LWicUGQSk+WT7dJvUkyRGnWqNMQB9GoZm1pzpRboY7nn1ypxIFeFntPlF4
+FQsDj43QLwWyPntKHEtzBRL8xurgUBN8Q5N0s8p0544fAQjQMNRbcTa0B7rBMDBc
+SLeCO5imfWCKoqMpgsy6vYMEG6KDA0Gh1gXxG8K28Kh8hjtGqEgqiNx2mna/H2ql
+PRmP6zjzZN7IKw0KKP/32+IVQtQi0Cdd4Xn+GOdwiK1O5tmLOsbdJ1Fu/7xk9TND
+TwIDAQABo4IBRjCCAUIwDwYDVR0TAQH/BAUwAwEB/zAOBgNVHQ8BAf8EBAMCAQYw
+SwYIKwYBBQUHAQEEPzA9MDsGCCsGAQUFBzAChi9odHRwOi8vYXBwcy5pZGVudHJ1
+c3QuY29tL3Jvb3RzL2RzdHJvb3RjYXgzLnA3YzAfBgNVHSMEGDAWgBTEp7Gkeyxx
++tvhS5B1/8QVYIWJEDBUBgNVHSAETTBLMAgGBmeBDAECATA/BgsrBgEEAYLfEwEB
+ATAwMC4GCCsGAQUFBwIBFiJodHRwOi8vY3BzLnJvb3QteDEubGV0c2VuY3J5cHQu
+b3JnMDwGA1UdHwQ1MDMwMaAvoC2GK2h0dHA6Ly9jcmwuaWRlbnRydXN0LmNvbS9E
+U1RST09UQ0FYM0NSTC5jcmwwHQYDVR0OBBYEFHm0WeZ7tuXkAXOACIjIGlj26Ztu
+MA0GCSqGSIb3DQEBCwUAA4IBAQAKcwBslm7/DlLQrt2M51oGrS+o44+/yQoDFVDC
+5WxCu2+b9LRPwkSICHXM6webFGJueN7sJ7o5XPWioW5WlHAQU7G75K/QosMrAdSW
+9MUgNTP52GE24HGNtLi1qoJFlcDyqSMo59ahy2cI2qBDLKobkx/J3vWraV0T9VuG
+WCLKTVXkcGdtwlfFRjlBz4pYg1htmf5X6DYO8A4jqv2Il9DjXA6USbW1FzXSLr9O
+he8Y4IWS6wY7bCkjCWDcRQJMEhg76fsO3txE+FiYruq9RUWhiF1myv4Q6W+CyBFC
+Dfvp7OOGAN6dEOM4+qR9sdjoSYKEBpsr6GtPAQw4dy753ec5
+-----END CERTIFICATE-----
