@@ -1,3 +1,4 @@
+ * Checks the certificate chain integrity
  * Does not accept certificates without SANs (use ```--allow-empty-san``` to ignore)
  * Bug fix in the handling of errors while fetching certificates
  * Allows a check on invalid FQDNs containing an underscore
